Testes envio de Email - Removido .ENV do GITIGNORE 2.0

--- a/.env
+++ b/.env
@@ -24,10 +24,10 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_DRIVER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
+MAIL_HOST=smtp.013is.com.br
+MAIL_PORT=587
+MAIL_USERNAME=sistema.seeduc@013is.com.br
+MAIL_PASSWORD=1332883987@
 MAIL_ENCRYPTION=null
 
 PUSHER_APP_ID=
