--- a/.env
+++ b/.env
@@ -28,7 +28,7 @@ MAIL_HOST=smtp.013is.com.br
 MAIL_PORT=587
 MAIL_USERNAME=sistema.seeduc@013is.com.br
 MAIL_PASSWORD=1332883987@
-MAIL_ENCRYPTION=null
+MAIL_ENCRYPTION=ssl
 
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
