--- a/.env
+++ b/.env
@@ -24,10 +24,10 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_DRIVER=smtp
-MAIL_HOST=smtp.013is.com.br
+MAIL_HOST=smtp.gruporesolv.com.br
 MAIL_PORT=465
-MAIL_USERNAME=sistema.seeduc@013is.com.br
-MAIL_PASSWORD=1332883987@
+MAIL_USERNAME=sco@gruporesolv.com.br	
+MAIL_PASSWORD=@#scor2017@
 MAIL_ENCRYPTION=ssl
 
 PUSHER_APP_ID=
