--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:HHo2iBpOe4wxIrgXRcoZgVmjm7qYM59tP1x6P51/rf8=
+APP_KEY=base64:T9IKAuw5JsSYBYQdqF//0nn4BxIdB6vOY9BcR0vsyqQ=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -9,9 +9,9 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=seeduc
+DB_DATABASE=sise
 DB_USERNAME=root
-DB_PASSWORD=1234
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -28,7 +28,7 @@ MAIL_HOST=smtp.013is.com.br
 MAIL_PORT=587
 MAIL_USERNAME=sistema.seeduc@013is.com.br
 MAIL_PASSWORD=1332883987@
-MAIL_ENCRYPTION=
+MAIL_ENCRYPTION=null
 
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
